data/derived/sp14/progs/unify/prog3333.ml.out
Characters 50-60:
  listReverse (n mod 10) :: (digitsOfInt (n/10))
              ^^^^^^^^^^
Error: This expression has type int but an expression was expected of type
         'a list
